test/errors/control_flow/int_main_nonzero_fail.hy
// EXPECT_FAIL: runtime
// EXPECT_EXIT: 1
// This should be treated as a failing program: main returns a non-zero code.
int main()
{
    return 1
}
